BUG: Missleading button when creating witnesses in side panel - Changed JS to hide & show button - Alignment of dropdown select

--- a/app/assets/stylesheets/green.css
+++ b/app/assets/stylesheets/green.css
@@ -155,6 +155,12 @@
   padding: 10px;
 }
 
+.detail_box select{
+ width: 100%;
+}
+
+
+
 
 
 /*main box*/
